# mirror_repo

./: Makefile  a.out  explication.txt  function_ls.c  function_ls2.c  function_ls3.c  lal  ma.c  main.c  my.h  my_printf0.c  my_printf1.c  my_printf2.c  my_printf3.c  my_printf4.c  my_printf5.c  my_str_to_word_array.c  nibbler.cpp  nibbler.hpp  output.ppm  raytracer  raytracer.cpp  raytracer.hpp  tardis.txt  test.cpp  trigo.c  trigo1.c  wolf3d
B-YEP-400-COT-4-1-zappy-amour.guidi/: .gitignore  CMakeLists.txt  Makefile  README.md  zappy_build.sh
B-YEP-400-COT-4-1-zappy-amour.guidi/.github/workflows/: check-directories.yml  merge_auto.yml
B-YEP-400-COT-4-1-zappy-amour.guidi/Ai/: Ai.cpp  CMakeLists.txt  Connection.cpp  Incant.cpp  Loop.cpp  Main.cpp  Prelimilaries.cpp
B-YEP-400-COT-4-1-zappy-amour.guidi/Ai/include/: AIEnums.hpp  Ai.hpp  Clientia.hpp  Inventory.hpp  Library.hpp  Tile.hpp
B-YEP-400-COT-4-1-zappy-amour.guidi/Gui/: CMakeLists.txt
B-YEP-400-COT-4-1-zappy-amour.guidi/Server/: CMakeLists.txt
B-YEP-400-COT-4-1-zappy-amour.guidi/Server/includes/: command.h  frees.h  function_connexes.h  map.h  server.h  trantoTime.h  trantorian.h
B-YEP-400-COT-4-1-zappy-amour.guidi/Server/src/: command.c  connect.c  eject.c  file.txt  findTrantorian.c  fork.c  frees.c  function_connexes.c  inventory.c  look.c  main.c  manageWelcome.c  map.c  mov.c  server.c  serverRegisterArgs.c  serversuiteun.c  take_inventory.c  trantOnmap.c  trantoTime.c  trantorian.c
B-YEP-400-COT-4-1-zappy-amour.guidi/tests/: test.cpp
asserts/: Makefile
cuddle/: Makefile  dataframe.c  main.c  (+4 more)
(+63 files in other folders)
